*
* 2.0.2
*

- Optimized LDAP synchronization for large directories
- Added NXSL API for manipulating object geolocation
- Fixed bug that allows to crash server remotely by sending garbage to client connector port
- NXSL: new hash map attributes "keys" and "values"
- Object custom attributes can be accessed as hash map in NXSL
- Android Console:
	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
	- Fixed bug in action bar commands: disconnect and exit sometimes wasn't working
- Android Agent:
	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
- Fixed issues: #1042, #1049, #1117, #1125, #1133, #1139


*
* 2.0.1
*

- Fixed random server crash if ODBC database driver is used
- Fixed incorrect reading of long text fields by MS SQL database driver
- Fixed issues: #1052, #1063


*
* 2.0
*

- Template import correctly handles updates for existing templates
- Scripts can be used as instance source in instance discovery DCIs
- NXSL node object attribute snmpSysDescription renamed back to sysDescription
- Selectors in NXSL
- Array attributes in NXSL: size, minIndex, maxIndex
- Hash map attributes in NXSL: size
- New NXSL function: mapList
- Subnet mask for synthetic subnets can be set in server configuration
- Added cumulative counters for server DB writer requests
- Fixed data corruption issues in ODBC and Oracle DB drivers
- Additional internal server metrics for monitoring DB activity and performance
- Added interface creation hook
- Improved System.InstalledProducts table handling on Windows
- Fixed inefficient query in Oracle monitoring subagent
- Server shutdown speed improved
- Faster SNMP probing during configuration polls
- Fixed false negative in node down detection if expected state of some interfaces set to IGNORE
- Agent SNMP proxy improved
- Improved agent data cache reconciliation
- Fixed Oracle 12c compatibility issues