@@ -7,6 +7,8 @@
 - Fixed bug that allows to crash server remotely by sending garbage to client connector port
 - NXSL: new hash map attributes "keys" and "values"
 - Object custom attributes can be accessed as hash map in NXSL
+- Management console:
+	- Improved file transfer error handling
 - Android Console:
 	- Updated ACRA library: now crash reports are sent via e-mail (will use the app installed on device to send mail)
 	- Fixed bug in action bar commands: disconnect and exit sometimes wasn't working
